--- a/src/main/resources/templates/employees/employee-update-form.html
+++ b/src/main/resources/templates/employees/employee-update-form.html
@@ -26,7 +26,7 @@
 	</header>
 	<div class="container">
 		<hr>
-		<p class="h4 mb-4">Create New Employee</p>
+		<p class="h4 mb-4">Update Employee</p>
 
 		<form action="#" th:action="@{/employees/save}"
 			th:object="${employee}" method="POST">
